--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,17 @@
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <jedis.version>2.7.2</jedis.version>
         <solrj.version>4.10.3</solrj.version>
-        <dubbo.version>2.5.3</dubbo.version>
+        <!--<dubbo.version>2.5.3</dubbo.version>-->
         <zookeeper.version>3.4.7</zookeeper.version>
         <zkclient.version>0.1</zkclient.version>
         <activemq.version>5.11.2</activemq.version>
         <jstl.version>1.2</jstl.version>
         <servlet-api.version>2.5</servlet-api.version>
         <jsp-api.version>2.0</jsp-api.version>
+        <mysql-connector>5.1.39</mysql-connector>
+        <mybatis-spring-boot>1.3.2</mybatis-spring-boot>
+        <spring-boot-starter-redis-version>2.0.4.RELEASE</spring-boot-starter-redis-version>
+        <dubbo-spring-boot>1.0.0</dubbo-spring-boot>
     </properties>
     <dependencies>
         <dependency>
@@ -51,6 +55,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>${spring-boot-starter-redis-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -71,7 +76,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
+            <version>${mybatis-spring-boot}</version>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -97,7 +102,7 @@
             <version>${solrj.version}</version>
         </dependency>
         <!-- dubbo相关 -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <version>${dubbo.version}</version>
@@ -107,6 +112,12 @@
                     <groupId>org.springframework</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>-->
+        <!-- Spring Boot Dubbo 依赖 -->
+        <dependency>
+            <groupId>io.dubbo.springboot</groupId>
+            <artifactId>spring-boot-starter-dubbo</artifactId>
+            <version>${dubbo-spring-boot}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -132,6 +143,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
