--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <druid.version>1.0.9</druid.version>
-        <pagehelper.version>3.4.2-fix</pagehelper.version>
+        <pagehelper.version>3.2.1</pagehelper.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <jedis.version>2.7.2</jedis.version>
         <solrj.version>4.10.3</solrj.version>
@@ -42,6 +42,7 @@
         <mybatis-spring-boot>1.3.2</mybatis-spring-boot>
         <spring-boot-starter-redis-version>2.0.4.RELEASE</spring-boot-starter-redis-version>
         <dubbo-spring-boot>1.0.0</dubbo-spring-boot>
+        <mybatis-paginator-version>1.2.15</mybatis-paginator-version>
     </properties>
     <dependencies>
         <dependency>
@@ -82,6 +83,11 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
             <version>${pagehelper.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.miemiedev</groupId>
+            <artifactId>mybatis-paginator</artifactId>
+            <version>${mybatis-paginator-version}</version>
         </dependency>
         <!-- 文件上传组件 -->
         <dependency>
@@ -145,6 +151,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector}</version>
             <scope>runtime</scope>
+        </dependency>
+        <!-- 连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
