--- a/repo-onlinestore-manager/src/main/resources/application.properties
+++ b/repo-onlinestore-manager/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 server.port=8080
 
-#logback??
-logging.config=classpath:logback.xml
-
 #?????
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -11,7 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=1234567890
 #--------------------------
 # ???????????????????????
-# ???????????
+# 中文乱码测试
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
